# signalyze

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: groups.example.txt  settings.toml
docs/: architecture.md
docs/adr/: 001-rebuild-from-scratch.md  002-storage-layering.md  003-rules-first-llm-fallback.md  004-tiered-linker.md  005-walk-forward-simulator.md  README.md
scripts/: get_groups.py
src/signalyze/: __init__.py  cli.py  config.py
src/signalyze/analytics/: __init__.py  metrics.py  tp_depth.py
src/signalyze/classify/: __init__.py  llm_fallback.py  rules.py  runner.py
src/signalyze/compare/: __init__.py  discrepancy.py
src/signalyze/domain/: __init__.py  follow_ups.py  link.py  market.py  messages.py  outcomes.py  signals.py
src/signalyze/evaluate/: __init__.py  actual.py  reported.py
src/signalyze/ingest/: __init__.py  groups_loader.py  raw_csv_backfill.py  telegram_fetcher.py
src/signalyze/link/: __init__.py  linker.py  llm_tiebreak.py
src/signalyze/llm/: __init__.py  client.py
src/signalyze/market/: __init__.py  provider.py  runner.py
src/signalyze/market/providers/: __init__.py  csv_provider.py  twelvedata.py
src/signalyze/parse/: __init__.py  follow_ups_llm.py  follow_ups_rules.py  follow_ups_runner.py  signals_llm.py  signals_rules.py  signals_runner.py
src/signalyze/parse/groups/: __init__.py
src/signalyze/report/: __init__.py  dashboard.py  html_export.py
src/signalyze/storage/: __init__.py  db.py  llm_cache.py  repositories.py
src/signalyze/storage/migrations/: 0001_initial.sql  0002_message_classifications.sql  0003_signals.sql  0004_follow_ups.sql  0005_signal_follow_up_links.sql  0006_reported_outcomes.sql  0007_market_bars.sql  0008_actual_outcomes.sql
src/signalyze/utils/: __init__.py  logging.py  money.py  time.py
tests/: conftest.py
tests/fixtures/: golden_classifications.jsonl  golden_follow_ups.jsonl  golden_signals.jsonl
tests/golden/: test_classify_golden.py  test_follow_ups_golden.py  test_signals_golden.py
tests/unit/: test_actual.py  test_classify_rules.py  test_compare.py  test_domain.py  test_follow_ups_rules.py  test_groups_loader.py  test_groups_loader_labels.py  test_linker.py  test_llm_cache.py  test_market.py  test_raw_csv_backfill.py  test_report.py  test_reported.py  test_signals_rules.py  test_storage.py  test_tp_depth.py
