[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalyze"
version = "0.1.0"
description = "Telegram trading-signal collection, follow-up linking, and reported-vs-actual performance analytics."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Signalyze" }]
dependencies = [
    "telethon>=1.40,<2.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=16.0",
    "httpx>=0.27,<1.0",
    "tenacity>=8.5,<10.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.40,<2.0",
]
report = [
    "streamlit>=1.36,<2.0",
    "plotly>=5.22,<6.0",
    "jinja2>=3.1,<4.0",
]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
    "types-requests",
    "pandas-stubs",
]

[project.scripts]
signalyze = "signalyze.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["signalyze*"]
exclude = ["tests*", "data*", "notebooks*", "venv*"]

[tool.setuptools.package-data]
signalyze = ["storage/migrations/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "venv", ".venv", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",  # Line length is enforced by formatter, allow occasional long strings.
    "B008",  # Allow Typer/FastAPI default factories like Argument(...).
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["venv", "build", "dist", "data", "notebooks"]

[[tool.mypy.overrides]]
module = ["telethon.*", "pyarrow.*", "plotly.*", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "signalyze.report.dashboard"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "golden: golden-set evaluation tests",
    "integration: requires external services or fixture data",
    "slow: long-running tests",
]

[tool.coverage.run]
branch = true
source = ["signalyze"]
omit = ["src/signalyze/cli.py"]
